main/bin/main.21242.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:165:52: error: parameter may not be qualified with an address space
                            __global struct PopVar StateT)
                                                   ^
1 warning and 1 error generated.
